# minimal-package-example

./: LICENSE.txt  README.md  pyproject.toml
