[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-ch200-project"
version = 0.0.1
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Author Name", email = "author@email.com" },
]
dependencies = [
]
